--- a/openstack-keystonev2.html.md.erb
+++ b/openstack-keystonev2.html.md.erb
@@ -16,7 +16,7 @@ title: Using Keystone API v2
     properties:
       openstack: &openstack
         auth_url: https://keystone.my-openstack.com:5000/v2.0 # <--- Replace with Keystone URL
-        tenant: OPENSTACK-PROJECT # <--- Replace with OpenStack tenant name
+        tenant: OPENSTACK-TENANT # <--- Replace with OpenStack tenant name
         username: OPENSTACK-USERNAME # <--- Replace with OpenStack username
         api_key: OPENSTACK-PASSWORD # <--- Replace with OpenStack password
         default_key_name: bosh
