--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -9,7 +9,7 @@ title: CLI v2 vs v1
 | bosh-init deploy <manifest> | bosh create-env <manifest>
 | bosh-init delete <manifest> | bosh delete-env <manifest>
 |-----------------------------|-----------------------------
-| Motivation: bosh-init CLI is not absorbed by the bosh CLI. One binary!
+| Motivation: bosh-init CLI is now absorbed by the bosh CLI. One binary!
 |-----------------------------|-----------------------------
 | bosh target <ip>            | bosh env <ip>
 | bosh status                 | bosh env
