--- a/director-api-v1.html.md.erb
+++ b/director-api-v1.html.md.erb
@@ -501,6 +501,8 @@ Deleting a deployment is performed in a Director task. Response will be a redire
 ---
 ## <a id="instances"></a> Instances in a deployment
 
+<p class="note">Note: This feature is available with bosh-release v256+.</p>
+
 [Instances](https://bosh.io/docs/terminology.html#instance) represent the expected state of the VMs of a deployment. The actual state of the VMs can be retrieved with the [`vms` endpoints](#vms). `instances` is similar to `vms`, but also contains instances that do not have a VM.
 
 ### <a id="list-instances"></a> `GET /deployments/{name}/instances`: List all instances
