--- a/agent-cpi-interactions.html.md.erb
+++ b/agent-cpi-interactions.html.md.erb
@@ -5,19 +5,19 @@ title: Agent-CPI Interactions
 Here is an overview of the interactions between the CPI and the Agent on CloudStack as an example:
 
 * The CPI drives the IaaS and the Agent.
-* The Agent is a versatile process which configures the OS to leverage IaaS-provisionned resources (network interfaces, disks, etc.), and perform other BOSH tasks (job compilation, job instantiation, etc.)
+* The Agent is a versatile process which configures the OS to leverage IaaS-provisioned resources (network interfaces, disks, etc.), and perform other BOSH tasks (job compilation, job instantiation, etc.)
 * The CPI asks the IaaS to instantiate VM template, VMs, volumes and possibly other constructs (floating IPs, security groups, connect LBs, etc.)
-* The Agent is initially driven by the CPI through the bosh-registry, and then by the Director through NATS-based messaging. The registry provides Director-side meta data to the Agent.
+* The Agent is initially driven by the CPI through the bosh-registry, and then by the Director through NATS-based messaging. The registry provides Director-side metadata to the Agent.
 
 <div class="gray"><%= image_tag("images/cpi-interactions-overview.png") %></div>
 
 <%#
-Image source in Saas (no need to own a graffle license and run macos)
+Image source in Saas (no need to own an OmniGraffle license and run MacOS)
 https://www.gliffy.com/go/html5/9205487?toke=&app=1b5094b0-6042-11e2-bcfd-0800200c9a66&dev=false
 %>
 
-The following sequence diagram illustrates in more details the CPI, agent, and registry interactions,
-in the case of the [CloudStack CPI](https://github.com/cloudfoundry-community/bosh-cloudstack-cpi-release)
+The following sequence diagram illustrates in more detail the CPI, agent, and registry interactions,
+in the case of the [CloudStack CPI](https://github.com/cloudfoundry-community/bosh-cloudstack-cpi-release):
 
 <div class="gray"><%= image_tag("images/cpi-sequence-diag.png") %></div>
 
@@ -52,7 +52,7 @@ Render it online http://plantuml.com/plantuml/ or from a private plantuml instan
   cloudstack_api -> vm : provision vm;
   activate vm
   vm -> bosh_agent : vm boostraps in dhcp,\nbosh-agent starts \n (reading agent.json);
-  bosh_agent -> vrouter : query meta-data server:\nget bosh_registry address from user data;
+  bosh_agent -> vrouter : query metadata server:\nget bosh_registry address from user data;
   bosh_agent -> bosh_registry : gets bootstrap info, ip adress and disks;
   bosh_agent -> vm : reconfigure network static ip;
   bosh_agent -> vm : mount and partition ephemeral disk;
@@ -68,7 +68,7 @@ Render it online http://plantuml.com/plantuml/ or from a private plantuml instan
 
 This section details the configuration and protocols supported by the Agent.
 
-The [VM Configuration Locations](vm-config.html#agent) provides a list of the configuration files that the Agent and their roles.
+[VM Configuration Locations](vm-config.html#agent) provides a list of Agent configuration files and their roles.
 
 ----
 ### <a id="agent-json"></a> `agent.json` file
@@ -87,7 +87,7 @@ The Infrastructure part of the file is documented into [Options](https://godoc.o
     * [ConfigDrive](https://godoc.org/github.com/cloudfoundry/bosh-agent/infrastructure#ConfigDriveSourceOptions)
     * [HTTP](https://godoc.org/github.com/cloudfoundry/bosh-agent/infrastructure#HTTPSourceOptions)
 
-Sample `agent.json` which configures the agent to read from an HTTP meta data service at a custom URL.
+Sample `agent.json` which configures the agent to read from an HTTP metadata service at a custom URL:
 
 ```json
 {
@@ -113,7 +113,7 @@ Sample `agent.json` which configures the agent to read from an HTTP meta data se
 }
 ```
 
-Sample `agent.json` which configures the agent ot read from a config drive. See [reference sample config-drive json](https://github.com/cloudfoundry/bosh-agent/blob/cecf354d90f6cedf540799fb50395adb034b16d2/integration/assets/config-drive-agent.json). See [config drive integration test](https://github.com/cloudfoundry/bosh-agent/blob/cecf354d90f6cedf540799fb50395adb034b16d2/integration/config_drive_test.go)
+Sample `agent.json` which configures the agent ot read from a config drive. See [reference sample config-drive json](https://github.com/cloudfoundry/bosh-agent/blob/cecf354d90f6cedf540799fb50395adb034b16d2/integration/assets/config-drive-agent.json). See [config drive integration test](https://github.com/cloudfoundry/bosh-agent/blob/cecf354d90f6cedf540799fb50395adb034b16d2/integration/config_drive_test.go):
 
 ```json
 {
@@ -147,11 +147,11 @@ Sample `agent.json` which configures the agent ot read from a config drive. See 
 ```
 
 ----
-### <a id="meta-data"></a> Meta-data server
+### <a id="metadata"></a> Metadata server
 
-The meta-data server initial serves the registry URL and DNS server to be able to resolve it.
+The metadata server initially serves the registry URL and DNS server list.
 
-Following is a sample content od the user-data part of the HTTP meta-data
+Following is a sample content of the user-data part of the HTTP metadata
 
 ```json
 {
@@ -161,32 +161,32 @@ Following is a sample content od the user-data part of the HTTP meta-data
 }
 ```
 
-The supported format of the meta-data server by the bosh-agent are documented into [UserDataContentsType](https://godoc.org/github.com/cloudfoundry/bosh-agent/infrastructure#UserDataContentsType) and [http\_metadata\_service_test.go](https://github.com/cloudfoundry/bosh-agent/blob/1dca3244702c18bf2c36483c529d4e7b3fb92b2e/infrastructure/http_metadata_service_test.go)
-along with the expected behavior of the bosh agent when reading this config.
+The supported format of the metadata server by the bosh-agent is documented in [UserDataContentsType](https://godoc.org/github.com/cloudfoundry/bosh-agent/infrastructure#UserDataContentsType) and [http\_metadata\_service_test.go](https://github.com/cloudfoundry/bosh-agent/blob/1dca3244702c18bf2c36483c529d4e7b3fb92b2e/infrastructure/http_metadata_service_test.go), along with the expected behavior of the bosh agent when reading this config.
 
 ----
 ### <a id="registry"></a> Registry
 
-The registry provides bosh-side meta data to the bosh agent.
+The registry provides bosh-side metadata to the bosh agent.
 
-From [Warden CPI doc](https://github.com/cppforlife/bosh-warden-cpi-release/blob/be1869737c0bfba96662dde3499c9181863f91a7/docs/bosh-micro-usage.md):
+From the [Warden CPI documentation](https://github.com/cppforlife/bosh-warden-cpi-release/blob/be1869737c0bfba96662dde3499c9181863f91a7/docs/bosh-micro-usage.md):
 
-* Registry is used by CPI to pass data to the Agent. Registry is started on a server specified by registry properties.
-* SSH tunnel will be started if SSH tunnel options are provided. SSH tunnel will start reverse ssh tunnel from the micro BOSH VM to the registry port. That makes registry available to the agent on remote machine.
+* The registry is used by the CPI to pass data to the Agent. The registry is started on a server specified by registry properties.
+* If SSH tunnel options are provided, a reverse ssh tunnel is created from the MicroBOSH VM to the registry, making the registry available to the agent on remote machine.
 
 #### <a id="registry-protocol"></a> Registry HTTP protocol
 
-The Agent expects to communicate with the bosh registry with a REST API documented into [api\_controller\_spec.rb](https://github.com/cloudfoundry/bosh/blob/2f73281f1a2a155ee807e7c0c9b8187c5a742f78/bosh-registry/spec/unit/bosh/registry/api_controller_spec.rb)
+The Agent expects to communicate with the bosh registry over a REST API documented in [api\_controller\_spec.rb](https://github.com/cloudfoundry/bosh/blob/2f73281f1a2a155ee807e7c0c9b8187c5a742f78/bosh-registry/spec/unit/bosh/registry/api_controller_spec.rb)
 
 Reference registry client and servers implementations are available in:
+
 * go-lang through [frodenas/bosh-registry](https://github.com/frodenas/bosh-registry)
 * java through [cloudfoundry-community/bosh-cloudstack-cpi-core](https://github.com/cloudfoundry-community/bosh-cloudstack-cpi-core/tree/44d14a5f184d2d5e8f1f2fcd6344e734d3344673/src/main/java/com/orange/oss/cloudfoundry/cscpi/boshregistry)
 
 #### <a id="registry-format"></a> Registry settings format
 
-The JSON payload of the settings stored in the registry are called settings, and their format supported by the Agent is documented in [settings_test.go](https://github.com/cloudfoundry/bosh-agent/blob/ebf9a36dfddf783ffae5ae3748787d259a29374a/settings/settings_test.go)
+The JSON payload of the settings stored in the registry, and its format supported by the Agent are documented in [settings_test.go](https://github.com/cloudfoundry/bosh-agent/blob/ebf9a36dfddf783ffae5ae3748787d259a29374a/settings/settings_test.go)
 
-Following is a sample content of the registry
+Sample registry content:
 
 ```json
 {
@@ -228,9 +228,9 @@ Following is a sample content of the registry
 ```
 
 ----
-### <a id="settings_json"></a> `settings.json` file
+### <a id="settings_json"></a> settings.json file
 
-`/var/vcap/bosh/settings.json`: Local copy of the bootstrap settings used by the Agent to configure network, system properties for the VM. They are refreshed every time Agent is restarted.
+`/var/vcap/bosh/settings.json`: Local copy of the bootstrap settings used by the Agent to configure network and system properties for the VM. They are refreshed every time Agent is restarted.
 
 The `settings.json` payload format is the same as the settings format initially returned by the registry.
 
