Azure CPI use env.bosh.group instead of env.bosh.group_name

--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -95,7 +95,7 @@ Schema for `cloud_properties` section:
 * **storage\_account\_location** [String, optional]: Location of the storage account. It is needed if the storage account does not exist. If it is not set, the location of the default resource group will be used. For more information, see [List all of the available geo-locations](http://azure.microsoft.com/en-us/regions/). For `AzureChinaCloud`, you should only use the regions in China, `chinanorth` or `chinaeast`.
 * **availability_set** [String, optional]: Name of an [availability set](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) to use for VMs. [More details](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/deploy-cloudfoundry-for-enterprise#availability-set).
     * If available set does not exist, it will be automatically created.
-    * If `availability_set` is not specified, Azure CPI will search `env.bosh.group_name` as the name of availability set. If neither `availability_set` nor `env.bosh.group_name` exists, VMs in this resource_pool won't be in any availability set.
+    * If `availability_set` is not specified, Azure CPI will search `env.bosh.group` as the name of availability set. If neither `availability_set` nor `env.bosh.group` exists, VMs in this resource_pool won't be in any availability set.
 * **platform\_update\_domain_count** [Integer, optional]: The count of [update domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is `5`.
 * **platform\_fault\_domain_count** [Integer, optional]: The count of [fault domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is `3`.
 * **load_balancer** [String, optional]: Name of an [load balancer](https://azure.microsoft.com/en-us/documentation/articles/load-balancer-overview/) the VMs should belong to. You need to create the load balancer manually before configuring it.
@@ -112,10 +112,10 @@ Schema for `cloud_properties` section:
       * If the Azure temporary disk size for the instance type is larger than `1023*1024` MiB, the default size is `1023*1024` MiB because max data disk size is `1023*1024` MiB on Azure.
       * Otherwise, the Azure temporary disk size will be used as the default size. See more information about [Azure temporary disk size](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-linux-sizes/).
 
-Example of `env.bosh.group_name`:
+Example of `env.bosh.group`:
 * **env** [Hash, optional]:
     * **bosh** [Hash, optional]:
-      * **group_name** [String, optional]: This will be used as the name of availability set for VMs when `cloud_properties.availability_set` does not exist.
+      * **group** [String, optional]: This will be used as the name of availability set for VMs when `cloud_properties.availability_set` does not exist.
 
 Example of a `Standard_A2` instance:
 
@@ -136,7 +136,7 @@ resource_pools:
       size: 30_720
   env:
     bosh:
-      group_name: <availability-set-name>
+      group: <availability-set-name>
 ```
 
 ---
